# color-gen

./: Cargo.toml
src/: gradient.rs  lib.rs  main.rs
