[package]
name = "color-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
miette = { version = "5.8.0", features = ["fancy"] }
owo-colors = "3.5.0"
palette = "0.6.1"
rand = "0.8.5"
thiserror = "1.0.24"
